fix: remove z-index

--- a/css/main.css
+++ b/css/main.css
@@ -1885,10 +1885,6 @@ line-height: 35px;
   border-radius: 5px
 }
 
-.ast-nav {
-  z-index: -1
-}
-
 
 /* END OF KNOW MORE PAGE */
 
